# ecmascript-save

./: .clang-format  .dockerignore  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CMakePresets.json  CMakelists.txt  Dockerfile  Doxyfile  LICENSE  Makefile  README.md  appveyor.yml  package.json  vcpkg.json
.github/workflows/: build.yml  cd.yml  ci.yml  codeql-analysis.yml
cmake/: CheckFilesystem.cmake  CheckICU.cmake  CheckOptional.cmake  CheckVariant.cmake  ColorDiagnostics.cmake  Cxx14Support.cmake  EnableLTO.cmake  FromUTF8.cmake  Pack.cmake  Prepend.cmake  WarningsAsErrors.cmake  config.cmake.in
cmake/compat/: FindICU.cmake
docs/: CMakeLists.txt  index.html  index.md  ribbon.html
docs/html/: annotated.html  ast_8cpp.html  ast_8cpp__dep__incl.map  ast_8cpp__dep__incl.md5  ast_8cpp__incl.map  ast_8cpp__incl.md5  ast_8h.html  ast_8h__dep__incl.map  ast_8h__dep__incl.md5  ast_8h__incl.map  ast_8h__incl.md5  ast_8h_source.html  ast__unittest_8cpp.html  ast__visitor_8h.html  ast__visitor_8h__dep__incl.map  ast__visitor_8h__dep__incl.md5  ast__visitor_8h__incl.map  ast__visitor_8h__incl.md5  ast__visitor_8h_source.html  basic__visitor_8cpp.html  basic__visitor_8cpp__incl.map  basic__visitor_8cpp__incl.md5  basic__visitor_8h.html  basic__visitor_8h__dep__incl.map  basic__visitor_8h__dep__incl.md5  basic__visitor_8h__incl.map  basic__visitor_8h__incl.md5  basic__visitor_8h_source.html  catch_8hpp.html  catch_8hpp__dep__incl.map  catch_8hpp__dep__incl.md5  catch_8hpp__incl.map  catch_8hpp__incl.md5  catch_8hpp_source.html  class_basic_lexer-members.html  class_basic_lexer.html  class_basic_lexer__inherit__graph.map  class_basic_lexer__inherit__graph.md5  class_basic_parser-members.html  class_basic_parser.html  (+1917 more)
docs/html/search/: all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1b.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_11.js  classes_12.js  classes_13.js  classes_14.js  classes_15.js  classes_16.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  (+113 more)
docs/latex/: annotated.tex  ast_8cpp.tex  ast_8cpp__dep__incl.md5  ast_8cpp__incl.md5  ast_8h.tex  ast_8h__dep__incl.md5  ast_8h__incl.md5  ast__unittest_8cpp.tex  ast__visitor_8h.tex  ast__visitor_8h__dep__incl.md5  ast__visitor_8h__incl.md5  basic__visitor_8cpp.tex  basic__visitor_8cpp__incl.md5  basic__visitor_8h.tex  basic__visitor_8h__dep__incl.md5  basic__visitor_8h__incl.md5  catch_8hpp.tex  catch_8hpp__dep__incl.md5  catch_8hpp__incl.md5  class_basic_lexer.eps  class_basic_lexer.tex  class_basic_lexer__inherit__graph.md5  class_basic_parser.eps  class_basic_parser.tex  class_basic_parser__coll__graph.md5  class_basic_parser__inherit__graph.md5  class_builder.tex  class_catch_1_1_assertion_result.tex  class_catch_1_1_assertion_result__coll__graph.md5  class_catch_1_1_between_generator.tex  class_catch_1_1_between_generator__coll__graph.md5  class_catch_1_1_between_generator__inherit__graph.md5  class_catch_1_1_binary_expression.tex  class_catch_1_1_binary_expression__coll__graph.md5  class_catch_1_1_binary_expression__inherit__graph.md5  class_catch_1_1_composite_generator.tex  class_catch_1_1_detail_1_1_approx.tex  class_catch_1_1_exception_translator_registrar.tex  class_catch_1_1_expression_lhs.tex  class_catch_1_1_expression_lhs__coll__graph.md5  (+875 more)
docs/man/man3/: ArgumentList.3  Arguments.3  ArrayExpression.3  ArrayLiteral.3  AssignmentExpression.3  BCinfo.3  BF96.3  BasicLexer.3  BasicLexer_Tokens_storage_t.3  BasicParser.3  BasicVisitor.3  Bigint.3  BinaryExpression.3  Binding.3  Block.3  Boolean.3  BooleanLiteral.3  BreakStatement.3  Builder.3  CallExpression.3  CallableVisitor.3  CaseBlock.3  CaseClause.3  Catch.3  Catch_AssertionInfo.3  Catch_AssertionResult.3  Catch_AssertionResultData.3  Catch_AutoReg.3  Catch_BetweenGenerator.3  Catch_BinaryExpression.3  Catch_CaseSensitive.3  Catch_CompositeGenerator.3  Catch_CopyableStream.3  Catch_Counts.3  Catch_DecomposedExpression.3  Catch_Detail.3  Catch_Detail_Approx.3  Catch_Detail_BorgType.3  Catch_Detail_FalseType.3  (+335 more)
ecmascript/: CMakeLists.txt  ecmascript.cpp  ecmascript.h  main.cpp
ecmascript/json/: CMakeLists.txt  json.cpp  json.hpp  json.test.cpp  parser.cpp
ecmascript/lexer/: CMakeLists.txt  lexer.cpp  lexer.hpp
ecmascript/libes/: CMakeLists.txt
ecmascript/parser/: expression.hpp  parser.cpp  parser.hpp  parser.test.cpp  statement.hpp
src/: CMakeLists.txt  ast.cpp  ast.h  ast_unittest.cpp  ast_visitor.h  basic_visitor.cpp  basic_visitor.h  config.h.in  crc32.h  dtoa.c  dtoa.h  eval.cpp  eval.h  eval_unittest.cpp  eval_visitor.h  filesystem.h  input_element.cpp  input_element.h  input_element_unittest.cpp  json.cpp  json.h  json_visitor.h  lexer.cpp  lexer.h  lexer_unittest.cpp  lexical_grammar.h  literal.h  logger.cpp  logger.h  main.cpp  matcher.cpp  matcher.h  optional.h  options.cpp  options.h  options_unittest.cpp  parser.cpp  parser.h  parser_unittest.cpp  pimpl.h  (+29 more)
src/ecmascript/: ecmascript.cpp  ecmascript.hpp
src/ecmascript/es/: main.cpp
src/ecmascript/json/: json.cpp  json.hpp
src/ecmascript/lexer/: grammar.hpp  lexer.cpp  lexer.hpp  lexer.test.cpp  token.cpp  token.hpp
src/ecmascript/parser/: expression.cpp  expression.hpp  expression.test.cpp  grammar.cpp  grammar.hpp  grammar.test.cpp  parser.hpp  parser.test.cpp  program.hpp  statement.cpp  statement.hpp
src/ecmascript/runtime/: eval.hpp
src/types/: boolean.cpp  boolean.h  null.cpp  null.h  number.cpp  number.h  object.cpp  object.h  property_descriptor.cpp  property_descriptor.h  reference.cpp  reference.h  string.cpp  string.h  undefined.cpp  undefined.h
tests/: CMakeLists.txt
tests/ch07/7.2/: S7.2_A1.1_t2.cpp
tests/ch08/: 8.1.cpp  8.2.cpp
tests/json/: array.cpp  false.cpp  null.cpp  number.cpp  object.cpp  string.cpp  true.cpp  whitespace.cpp
tests/lexer/: expression.cpp
tests/parser/: statement.cpp
